ViewTransition snapshots are incorrectly stored in sRGB. https://bugs.webkit.org/show_bug.cgi?id=304981 <rdar://problem/167634138>

Reviewed by Simon Fraser.

ViewTransition snapshot were using sRGB, which can represent colors differently
to how the live content displays them (in device-specific colorspace).

* Source/WebCore/dom/ViewTransition.cpp:

Canonical link: https://commits.webkit.org/310012@main